[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Terrain_Map.gd" type="Script" id=1]
[ext_resource path="res://Assets/world_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/UI/left.png" type="Texture" id=3]
[ext_resource path="res://Assets/Font/ui_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/UI/right.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/pressed_button.tres" type="StyleBox" id=6]
[ext_resource path="res://Assets/UI/default_button.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets/UI/help_button.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/paper_background.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/close_button.png" type="Texture" id=10]
[ext_resource path="res://Assets/Font/small_ui_font.tres" type="DynamicFont" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[node name="Terrain_Map" type="Node2D"]
script = ExtResource( 1 )

[node name="Terrain" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="UI" type="Node2D" parent="."]

[node name="Menu_Bar_BG" type="Panel" parent="UI"]
editor/display_folded = true
margin_top = 848.0
margin_right = 1600.0
margin_bottom = 900.0
custom_styles/panel = SubResource( 1 )

[node name="Menu_Bar" type="HBoxContainer" parent="UI/Menu_Bar_BG"]
margin_right = 1600.0
margin_bottom = 52.0
custom_constants/separation = 15

[node name="Left_Button" type="TextureButton" parent="UI/Menu_Bar_BG/Menu_Bar"]
margin_right = 41.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
texture_normal = ExtResource( 3 )
expand = true

[node name="Map_Number" type="Label" parent="UI/Menu_Bar_BG/Menu_Bar"]
margin_left = 56.0
margin_right = 181.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
custom_fonts/font = ExtResource( 4 )
text = "Map: "

[node name="Right_Button" type="TextureButton" parent="UI/Menu_Bar_BG/Menu_Bar"]
margin_left = 196.0
margin_right = 237.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
texture_normal = ExtResource( 5 )
expand = true

[node name="Rate_Iteration" type="Button" parent="UI/Menu_Bar_BG/Menu_Bar"]
margin_left = 252.0
margin_right = 671.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 4 )
text = "Rate"

[node name="Save" type="Button" parent="UI/Menu_Bar_BG/Menu_Bar"]
margin_left = 686.0
margin_right = 1105.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 4 )
text = "Save Settings"

[node name="Menu" type="Button" parent="UI/Menu_Bar_BG/Menu_Bar"]
margin_left = 1120.0
margin_right = 1539.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 4 )
text = "Menu"

[node name="Help" type="TextureButton" parent="UI/Menu_Bar_BG/Menu_Bar"]
margin_left = 1554.0
margin_right = 1600.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
texture_normal = ExtResource( 8 )
expand = true

[node name="Rateing_Panel" type="TextureRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 550.0
margin_top = 100.0
margin_right = 1050.0
margin_bottom = 700.0
texture = ExtResource( 9 )
expand = true

[node name="Close_Button" type="TextureButton" parent="UI/Rateing_Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -84.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 84.0
texture_normal = ExtResource( 10 )
expand = true

[node name="Ratings" type="HSplitContainer" parent="UI/Rateing_Panel"]
margin_left = 30.0
margin_top = 90.0
margin_right = 470.0
margin_bottom = 530.0

[node name="Rating" type="VBoxContainer" parent="UI/Rateing_Panel/Ratings"]
margin_right = 140.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Water_Level" type="Label" parent="UI/Rateing_Panel/Ratings/Rating"]
margin_right = 140.0
margin_bottom = 107.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 11 )
text = "Water Level"
valign = 1

[node name="Mountains" type="Label" parent="UI/Rateing_Panel/Ratings/Rating"]
margin_top = 111.0
margin_right = 140.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 11 )
text = "Mountains"
valign = 1

[node name="Islands" type="Label" parent="UI/Rateing_Panel/Ratings/Rating"]
margin_top = 222.0
margin_right = 140.0
margin_bottom = 329.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 11 )
text = "Islands"
valign = 1

[node name="Biomes" type="Label" parent="UI/Rateing_Panel/Ratings/Rating"]
margin_top = 333.0
margin_right = 140.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 11 )
text = "Biomes"
valign = 1

[node name="Value" type="VBoxContainer" parent="UI/Rateing_Panel/Ratings"]
margin_left = 152.0
margin_right = 440.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Water_Level" type="OptionButton" parent="UI/Rateing_Panel/Ratings/Value"]
margin_top = 38.0
margin_right = 288.0
margin_bottom = 69.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 11 )
text = "Select one"

[node name="Mountains" type="OptionButton" parent="UI/Rateing_Panel/Ratings/Value"]
margin_top = 149.0
margin_right = 288.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 11 )
text = "Select one"

[node name="Islands" type="OptionButton" parent="UI/Rateing_Panel/Ratings/Value"]
margin_top = 260.0
margin_right = 288.0
margin_bottom = 291.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 11 )
text = "Select one"

[node name="Biomes" type="OptionButton" parent="UI/Rateing_Panel/Ratings/Value"]
margin_top = 371.0
margin_right = 288.0
margin_bottom = 402.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 11 )
text = "Select one"

[node name="Done" type="Button" parent="UI/Rateing_Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -80.0
margin_right = 100.0
margin_bottom = -30.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 4 )
text = "Done"

[node name="Help_Panel" type="TextureRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 550.0
margin_top = 100.0
margin_right = 1050.0
margin_bottom = 700.0
texture = ExtResource( 9 )
expand = true

[node name="Close_Button" type="TextureButton" parent="UI/Help_Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -84.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 84.0
texture_normal = ExtResource( 10 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Help_Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 105.0
margin_right = -20.0
margin_bottom = -45.0
custom_fonts/normal_font = ExtResource( 4 )
text = "HELP"

[connection signal="pressed" from="UI/Menu_Bar_BG/Menu_Bar/Left_Button" to="." method="_on_Left_Button_pressed"]
[connection signal="pressed" from="UI/Menu_Bar_BG/Menu_Bar/Right_Button" to="." method="_on_Right_Button_pressed"]
[connection signal="pressed" from="UI/Menu_Bar_BG/Menu_Bar/Rate_Iteration" to="." method="_on_Rate_Iteration_pressed"]
[connection signal="pressed" from="UI/Menu_Bar_BG/Menu_Bar/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="UI/Menu_Bar_BG/Menu_Bar/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="UI/Rateing_Panel/Close_Button" to="." method="_on_Rating_Panel_Close_Button_pressed"]
[connection signal="pressed" from="UI/Rateing_Panel/Done" to="." method="generate_next_iteration"]
[connection signal="pressed" from="UI/Help_Panel/Close_Button" to="." method="_on_Rating_Panel_Close_Button_pressed"]
[connection signal="pressed" from="UI/Help_Panel/Close_Button" to="." method="_on_Help_Panel_Close_Button_pressed"]
